services/kafka/network-policy-kafka-knative.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-knative-to-kafka
  namespace: kafka
  labels:
    app.kubernetes.io/instance: minio-event-bridge
spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: kafka-cluster
      strimzi.io/name: kafka-cluster-kafka
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: knative-eventing
    ports:
    - protocol: TCP
      port: 9092
